# MyAutoML

./: .gitignore  Makefile  README.md  app.py  app_utils.py  docker-compose.yaml  exec_train.py  mlflow_utils.py  pipeline.py  pyproject.toml  test.py  utils.py
components/deploy/: Dockerfile  component.yaml  main.py
components/evaluate/: component.yaml  main.py  pyproject.toml
components/preprocess/: Dockerfile  component.yaml  main.py  pyproject.toml  utils.py
components/train/: Dockerfile  component.yaml  main.py  objective.py  pyproject.toml  table.py  table_utils.py  tmp.py  utils.py
serving/: Dockerfile  pyproject.toml  server.py
training/: Dockerfile  main.py  pyproject.toml  table.py
