[tool.poetry]
name = "serving"
version = "0.1.0"
description = ""
authors = ["nomnomnonono <nozomu.koujiguchi1204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
google-cloud-storage = "^2.10.0"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"
gcsfs = "^2023.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
